--- a/index2.html
+++ b/index2.html
@@ -16,6 +16,7 @@
         <button id="load-file">Load sim2.txt</button>
         <input id="file-input" type="file" accept=".txt" />
         <button id="simulate">Run prediction</button>
+        <button id="mass-simulate">Mass simulate (1000)</button>
       </div>
       <label for="raw">Paste `sim2.txt` content:</label>
       <textarea id="raw" placeholder="Paste sim2.txt here"></textarea>
@@ -29,6 +30,11 @@
     <section id="final">
       <h2>Final Standings</h2>
       <div id="final-table"></div>
+    </section>
+
+    <section id="mass-simulation-results">
+      <h2>Mass Simulation Results</h2>
+      <div id="mass-table"></div>
     </section>
 
     <section id="animation">
